Only put background on top few elements to stop background pattern from bleeding through

--- a/themes/static-kalbag/src/stylus/colour.styl
+++ b/themes/static-kalbag/src/stylus/colour.styl
@@ -173,22 +173,14 @@ highlight-and-underline-on-interaction()
 	&:hover, &:active
 		highlight-and-underline-on-interaction()
 
-// add colour behind elements so image doesn’t make it hard to read
+// add colour behind top elements on page so image doesn’t make it hard to read
 #content
-	h1, h2, h3, h4, h5, h6, article p, article ul, article ol, article blockquote, .posts-list h3, .posts-list .entry-meta, .posts-list p
+	h1, h2:nth-of-type(1), p:nth-of-type(1)
 		background $primary-bg
 		box-shadow $primary-bg 0 0 0 ($layout-unit)*1.4
 		
 		@media screen and (min-width: 18em)
 			box-shadow $primary-bg 0 0 0 ($layout-unit)*2.6
 
-	// remove box shadow on figcaptions as it sometimes overlaps images, and background will unlikely be that far down
-	figcaption p
-		box-shadow none
-	
-	@media screen and (min-width: 18em)
-		figcaption p
-			box-shadow none
-
-h1, h2, h3, h4, h5, h6, .posts-lists h3
+h1
 		display table // make background only cover space behind text
